--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,14 +4,13 @@ body {
 }
 
 .page-footer {
-  background-color: $main_grey_color;
+  //
 }
 
 .page-footer__contacts {
   // contacts
-  // background-color: $main_grey_color;
 }
 
 .page-footer__links {
-  // background-color: $main_grey_color;
+  // footer-links
 }
