--- a/source/sass/blocks/additional-item.scss
+++ b/source/sass/blocks/additional-item.scss
@@ -5,111 +5,120 @@ body {
 
 .additional-item {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
-  // flex-direction: column;
-  padding: 10px 0 10px 0;
+  padding-bottom: 17px;
 
-  border-bottom: 1px solid $border_color;
+  border-top: 1px solid $border_color;
 
+  &:last-child {
+    border-bottom: 1px solid $border_color;
+  }
 
   @media (min-width: $tablet-breakpoint) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    padding-top: 24px;
+    padding-right: 38px;
+    padding-bottom: 29px;
+    padding-left: 38px;
+
     border: 1px solid $border_color;
     border-bottom: none;
-
-    &:last-child {
-      border-bottom: 1px solid $border_color;
-    }
   }
 
   @media (min-width: $desktop-breakpoint) {
+    // justify-content: flex-end;
+    margin: 0;
+    margin-bottom: 2px;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 14px;
+
     border: none;
     border-top: 1px solid $border_color;
-
-    &:last-child {
-      border-bottom: none;
-    }
   }
 }
 
 .additional-item__title {
-  flex-basis: 100%;
-  // display: block;
-  // line-height: 16px;
-  // line-height: 1;
+  display: flex;
+  align-items: center;
+  padding-top: 12px;
 
+  line-height: 20px;
   text-transform: uppercase;
 
-  @include font(16px, 400, $additional_font_color);
+  @include font(16px, 400, $title_font_color);
 
   @media (min-width: $tablet-breakpoint) {
     flex-basis: 50%;
+    margin-bottom: 10px;
+    padding-top: 0;
 
     font-size: 20px;
   }
 
   @media (min-width: $desktop-breakpoint) {
-    flex-basis: 33.3333%;
+    // flex-basis: 33.3333%;
+    flex-basis: 170px;
+    margin: 0;
+    padding: 0;
   }
 }
 
-// .additional-item__wrap {
-// display: block;
-// line-height: 14px;
-// @include font_arial(14px, 400, $text_font_color);
-
-// @media (min-width: $tablet-breakpoint) {
-// line-height: 20px;
-//   font-size: 16px;
-// }
-
-// @media (min-width: $desktop-breakpoint) {
-//
-// }
-// }
-
 .additional-item__content {
   display: flex;
-  flex-basis: 100%;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 12px;
+  padding-top: 7px;
+
+  line-height: 20px;
   // line-height: 14px;
 
   @include font_arial(14px, 400, $text_font_color);
 
   @media (min-width: $tablet-breakpoint) {
     flex-basis: 50%;
+    justify-content: flex-end;
+    margin: 0;
     // line-height: 20px;
+    padding-top: 0;
 
     font-size: 16px;
   }
 
   @media (min-width: $desktop-breakpoint) {
-    flex-basis: 33.3333%;
+    // flex-basis: 33.3333%;
+    flex-basis: 290px;
+    margin-left: auto;
   }
 }
 
 .additional-item__package {
-  // line-height: 14px;
-  // @media (min-width: $tablet-breakpoint) {
-  //
-  // }
+  @media (min-width: $tablet-breakpoint) {
+    flex-basis: 70%;
 
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
+    text-align: right;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    text-align: left;
+  }
 }
 
 .additional-item__price {
-  // display: block;
-  // line-height: 14px;
-  // @media (min-width: $tablet-breakpoint) {
-  //
-  // }
+  @media (min-width: $tablet-breakpoint) {
+    flex-basis: 30%;
 
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
+    text-align: right;
+    // margin-left: 55px;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    text-align: right;
+  }
 }
 
 .additional-item__button {
@@ -118,12 +127,16 @@ body {
   // line-height: 20px;
 
   @include font(16px, 400, $light_font_color);
-  // @media (min-width: $tablet-breakpoint) {
-  //
-  // }
+
+  @media (min-width: $tablet-breakpoint) {
+    margin-top: 15px;
+  }
 
   @media (min-width: $desktop-breakpoint) {
-    flex-basis: 33.3333%;
+    // flex-basis: 30%;
+    flex-basis: 246px;
+    margin: 0;
+    margin-left: 37px;
   }
 }
 
