--- a/source/sass/blocks/basic-item.scss
+++ b/source/sass/blocks/basic-item.scss
@@ -6,18 +6,53 @@ body {
 .basic-item {
   display: flex;
   flex-wrap: wrap;
-  // flex-direction: column;
-  // align-items: center;
-  padding: 25px 0 25px 0;
+  // padding-top: 20px;
+  width: 320px;
+  // padding-right: 20px;
+  padding-bottom: 24px;
+  // padding-left: 20px;
 
-  border: 1px solid $card_border_color;
+  border: 1px solid $border_color;
+  border-bottom: none;
+
+  &:last-child {
+    border-bottom: 1px solid $border_color;
+  }
 
   @media (min-width: $tablet-breakpoint) {
+    position: relative;
+
     flex-direction: column;
-    align-items: center;
+    width: 324px;
+    margin-bottom: 139px;
+    padding-top: 164px;
+    padding-right: 38px;
+    padding-bottom: 40px;
+    padding-left: 38px;
 
     background-color: $main_grey_color;
     border: none;
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    width: 245px;
+    margin-bottom: 142px;
+
+    &:nth-last-child(-n + 4) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.basic-item__text-wrapper {
+  flex-grow: 1;
+
+  @media (min-width: $tablet-breakpoint) {
+    // flex-grow: 0;
   }
 
   // @media (min-width: $desktop-breakpoint) {
@@ -25,24 +60,52 @@ body {
   // }
 }
 
-.basic-item__wrapper {
-  //
-}
-
 .basic-item__img {
   width: 140px;
   height: 144px;
+  // margin-bottom: 20px;
+
+  // background-color: transparent;
+
+
+  @media (min-width: $tablet-breakpoint) {
+    position: absolute;
+    // TODO править позицию изображения товара
+    top: -100px;
+    left: 0;
+    // display: none;
+
+    width: 324px;
+    // height: 174px;
+    height: 208px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    width: 245px;
+    height: 208px;
+  }
 }
 
 .basic-item__title {
-  // line-height: 20px;
+  width: 80px;
+  margin-bottom: 15px;
+  padding-top: 21px;
+
+  line-height: 20px;
   text-transform: uppercase;
 
   @include font(16px, 400, $title_font_color);
 
 
   @media (min-width: $tablet-breakpoint) {
+    width: 130px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    padding-top: 0;
+
     font-size: 20px;
+    text-align: center;
   }
 
   // @media (min-width: $desktop-breakpoint) {
@@ -50,22 +113,23 @@ body {
   // }
 }
 
-.basic-item__title--proposal {
-  text-align: center;
-}
-
 .basic-item__list {
-  //
+  // width: 100%;
 }
 
-.basic-item__content {
-  // line-height: 16px;
+.description-list {
   // text-align: center;
+  // width: 100px;
+  line-height: 16px;
+
   @include font_arial(12px, 400, $text_font_color);
 
 
   @media (min-width: $tablet-breakpoint) {
+    margin-bottom: 32px;
+
     font-size: 16px;
+    line-height: 20px;
   }
 
   // @media (min-width: $desktop-breakpoint) {
@@ -73,29 +137,46 @@ body {
   // }
 }
 
-.basic-item__content--proposal {
-  line-height: 1.2;
-  text-align: center;
+.description-list__item {
+  display: flex;
+  // flex-grow: 1;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-breakpoint) {
+    padding-top: 5px;
+    padding-bottom: 6px;
+
+    border-bottom: 1px solid $border_color;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 .basic-item__volume {
-  // @media (min-width: $tablet-breakpoint) {
   //
-  // }
+  @media (min-width: $tablet-breakpoint) {
+    // padding-top: 8px;
+    // padding-bottom: 6px;
+  }
 
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
+  @media (min-width: $desktop-breakpoint) {
+    // line-height: 1.5;
+  }
 }
 
 .basic-item__taste {
-  // @media (min-width: $tablet-breakpoint) {
-  //
-  // }
+  @media (min-width: $tablet-breakpoint) {
+    //   padding-top: 8px;
+    //   padding-bottom: 10px;
+  }
 
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
+  @media (min-width: $desktop-breakpoint) {
+    // padding-top: 8px;
+    // padding-bottom: 6px;
+  }
 }
 
 .basic-item__price {
@@ -107,24 +188,3 @@ body {
   //
   // }
 }
-
-.basic-item__button {
-  // TODO изменить ширину кнопки для торговой карты
-  // Text: Заказать
-
-  // @media (min-width: $tablet-breakpoint) {
-  //
-  // }
-
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
-}
-
-// ==================== tab
-// TODO размеры кнопки унифицировать
-// TODO размеры кнопки 250 или 245
-// width: 249px
-// ==================== desctop
-// TODO размеры кнопки 170 ?
-// width: 169px
