--- a/source/sass/blocks/basic-products.scss
+++ b/source/sass/blocks/basic-products.scss
@@ -7,61 +7,72 @@ body {
   // display: block;
 }
 
-// .basic-products__wrapper {
-// display: block;
-// }
-
-.wrapper--product-cards {
-  padding-right: 0;
-  padding-left: 0;
+.basic-products__wrapper {
+  width: $mobile-wrapper;
+  padding-top: 5px;
 
   @media (min-width: $tablet-breakpoint) {
-    padding-right: $tablet-padding;
-    padding-left: $tablet-padding;
+    width: $tablet-wrapper;
+    margin-bottom: 45px;
+    padding-top: 20px;
   }
 
   @media (min-width: $desktop-breakpoint) {
-    padding-right: $desktop-padding;
-    padding-left: $desktop-padding;
+    width: $desktop-wrapper;
+    margin-bottom: 53px;
+    // padding-right: 40px;
+    // padding-left: 40px;
+    padding-top: 9px;
   }
 }
 
+
 .basic-products__title {
-  // line-height: 60px;
+  margin-bottom: 18px;
+  padding-top: 10px;
+  // padding-right: 20px;
+  padding-bottom: 10px;
+  // padding-left: 20px;
+
+  line-height: 60px;
+
   @include font(36px, 400, $title_font_color);
 
 
   @media (min-width: $tablet-breakpoint) {
+    margin-bottom: 154px;
+    // padding-right: 30px;
+    // padding-left: 30px;
+
     font-size: 60px;
   }
 
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
+  @media (min-width: $desktop-breakpoint) {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
 
 .basic-products__list {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: center;
+
   @media (min-width: $tablet-breakpoint) {
-    //
+    justify-content: space-between;
   }
 
   // @media (min-width: $desktop-breakpoint) {
-  //
+  //   justify-content: space-between;
   // }
 }
 
 .basic-products__item {
-  flex-basis: 100%;
-  // products-item
-
+  //
   @media (min-width: $tablet-breakpoint) {
-    flex-basis: 50%;
+    //
   }
 
   @media (min-width: $desktop-breakpoint) {
-    flex-basis: 25%;
+    //
   }
 }
