--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,51 +5,31 @@ body {
 
 .contacts {
   position: relative;
-
-  padding-top: 79px;
-  padding-bottom: 10px;
-
-  background-color: $main_grey_color;
-
-  @media (min-width: $tablet-breakpoint) {
-    padding-top: 238px;
-  }
-
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
 }
 
-.contacts__wrapper {
-  position: absolute;
-  top: 22px;
-  right: 0;
-  left: 0;
-  z-index: 1;
-
+.contacts__text-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 auto;
-  // margin-bottom: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 18px;
+  padding-bottom: 14px;
 
-  background-color: $light_font_color;
+  background-color: transparent;
+
 
   @media (min-width: $tablet-breakpoint) {
-    top: 41px;
-
-    padding: 64px 72px 57px 72px;
+    padding-top: 57px;
+    padding-bottom: 46px;
   }
 
   @media (min-width: $desktop-breakpoint) {
     position: absolute;
-    top: 100px;
-    left: calc(50% - 600px);
+    top: 96px;
+    left: calc(50% - 610px);
     z-index: 2;
 
-    width: 500px;
+    width: 570px;
+    padding-top: 55px;
 
     background-color: $light_font_color;
   }
@@ -57,6 +37,8 @@ body {
 
 .contacts__title {
   flex-basis: 50%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   line-height: 20px;
   text-transform: uppercase;
@@ -66,18 +48,21 @@ body {
 
   @media (min-width: $tablet-breakpoint) {
     flex-basis: 30%;
+    margin-left: 41px;
 
     font-size: 20px;
-    line-height: 26px;
+    line-height: 25px;
   }
 
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
+  @media (min-width: $desktop-breakpoint) {
+    margin-left: 76px;
+  }
 }
 
 .contacts__address {
   flex-basis: 50%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   line-height: 20px;
 
@@ -89,13 +74,20 @@ body {
     flex-basis: 30%;
     flex-direction: column;
     justify-content: space-between;
-    // align-items: flex-start;
+    align-items: flex-end;
+    width: 170px;
+    margin-right: 40px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 
     font-size: 16px;
     text-align: right;
   }
 
   @media (min-width: $desktop-breakpoint) {
+    align-items: flex-start;
+    margin-right: 73px;
+
     text-align: left;
   }
 }
@@ -103,13 +95,6 @@ body {
 .contacts__map {
   position: relative;
   z-index: 0;
-
-  height: 400px;
-
-  background-color: $main_grey_color;
-  // margin: auto;
-
-  // background-color: $main_grey_color;
 }
 
 .contacts__mapframe {
@@ -117,29 +102,26 @@ body {
 }
 
 .contacts__map-img {
-  position: absolute;
-  right: 0;
-  left: 0;
-  z-index: -1;
+  width: 100%;
+  // width: 320px;
+  height: 364px;
+  margin: 0 auto;
 
-  width: 320px;
-  height: 400px;
-  margin: auto;
-  // background-color: $main_grey_color;
-
+  background-color: $main_grey_color;
   background-image: url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: center center;
+  // background-size: contain;
 
   @media (min-width: $tablet-breakpoint) {
-    width: 768px;
+    // width: 767px;
+    height: 400px;
 
     background-image: url("../img/bg-map-tablet@1x.png");
   }
 
   @media (min-width: $desktop-breakpoint) {
-    width: 1140px;
-
+    // width: 1140px;
     background-image: url("../img/bg-map-desktop@1x.png");
   }
 
@@ -147,7 +129,7 @@ body {
   &::after {
     content: "";
     position: absolute;
-    top: 175px;
+    top: 139px;
     left: calc(50% - 28px);
 
     width: 55px;
