--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -5,19 +5,18 @@ body {
 
 .footer-logo {
   display: flex;
-  // flex-shrink: 1;
-  flex-wrap: wrap;
   justify-content: center;
-  // padding: 29px 10px 31px 10px;
-  padding: 29px 0 31px 0;
+  padding-top: 39px;
+  padding-bottom: 31px;
 
   @media (min-width: $tablet-breakpoint) {
-    flex-basis: 25%;
     justify-content: flex-start;
+    width: 180px;
     padding: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 }
-
 
 .footer-logo__image {
   width: 128px;
@@ -32,11 +31,3 @@ body {
     opacity: 0.6;
   }
 }
-
-// width: 128px;
-// height: 24px;
-
-// background-image: url("../img/logo-footer.svg");
-// background-repeat: no-repeat;
-// background-position: center;
-// background-size: contain;
