--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,31 +5,37 @@ body {
 
 .social {
   display: flex;
+  // flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  // padding: 22px 63px 22px 52px;
-  padding: 22px 0 22px 0;
-
+  padding-top: 17px;
+  padding-right: 70px;
+  padding-bottom: 16px;
+  padding-left: 60px;
 
   @media (min-width: $tablet-breakpoint) {
-    flex-basis: 50%;
-    // justify-content: space-between;
+    width: 250px;
     padding: 0;
+    padding-top: 5px;
+    padding-right: 62px;
+    padding-bottom: 5px;
+    padding-left: 44px;
   }
 }
 
 .social__item {
-  display: flex;
-  flex-basis: 19.5%;
-  justify-content: center;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
 
   @media (min-width: $tablet-breakpoint) {
-    flex-basis: 14%;
+    //
   }
 
   @media (min-width: $desktop-breakpoint) {
-    flex-basis: 8%;
+    //
   }
 }
 
@@ -63,10 +69,6 @@ body {
     width: 30px;
     height: 16px;
   }
-
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
 }
 
 .social__link--insta {
@@ -80,10 +82,6 @@ body {
     width: 23px;
     height: 23px;
   }
-
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
 }
 
 .social__link--fb {
@@ -97,8 +95,4 @@ body {
     width: 14px;
     height: 28px;
   }
-
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
 }
