--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -51,25 +51,10 @@
 @import "blocks/copyright";
 
 // TODO background body
-
-// TODO для кнопок лучше задать height-line один раз для всех breakpoints
+// TODO добавить aria для чтения?
 
 // TODO править изменение шрифта по breakpoints
 
-// TODO оптимизоровать код для шрифта кнопки form
-
-// TODO для псевдоэлементов display: block там где нужно
-
-// TODO <sup>*</sup>
-
-// TODO = 3 = 2 числа после запятой в дроби достаточно!
-
-
 // TODO сделать скрипт для замены картинок в секции slider
 
-
-// TODO сделать одинаковым цвет шрифта в меню сайта
-
 // TODO Проверить скрин-ридером
-
-// TODO фон контактов серый для неглавных страниц
