--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -19,6 +19,11 @@ body {
   background-position: center center;
   background-size: contain;
 
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+  }
+
+
   @media (min-width: $tablet-breakpoint) {
     flex-direction: row;
     width: 708px;
@@ -29,6 +34,10 @@ body {
     padding-left: 81px;
 
     background-image: url("../img/gift-photo-tablet@1x.jpg");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: $desktop-breakpoint) {
@@ -40,6 +49,10 @@ body {
     padding-bottom: 32px;
 
     background-image: url("../img/gift-photo-desktop@1x.jpg");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+    }
   }
 
   &::before {
