--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -110,19 +110,34 @@ body {
   background-color: $main_grey_color;
   background-image: url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
-  background-position: center center;
-  // background-size: contain;
+  background-position: center top;
+  background-size: auto 364px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/bg-map-mobile@2x.png");
+  }
 
   @media (min-width: $tablet-breakpoint) {
     // width: 767px;
     height: 400px;
 
     background-image: url("../img/bg-map-tablet@1x.png");
+    background-size: auto 400px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-map-tablet@2x.png");
+    }
   }
 
   @media (min-width: $desktop-breakpoint) {
-    // width: 1140px;
+    // width: 100%;
+    // height: 400px;
     background-image: url("../img/bg-map-desktop@1x.png");
+    // background-size: 1440 auto;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-map-desktop@2x.png");
+    }
   }
 
 
