--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -508,6 +508,10 @@ body {
 
   @include font(16px, 400, $text_font_color);
 
+  &:focus {
+    outline: 2px solid $input_active;
+  }
+
   @media (min-width: $tablet-breakpoint) {
     width: 631px;
     height: 175px;
@@ -857,21 +861,19 @@ input[type="tel"] {
     border: 1px solid $border_color;
     cursor: pointer;
   }
-}
 
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-.form__response {
   &:focus {
     outline: 2px solid $input_active;
   }
+
+  &:focus:invalid {
+    outline: 2px solid $input_error;
+  }
+
+  // &:invalid {
+  //   outline: 2px solid $input_error;
+  // }
 }
-
-// &:error {
-//   outline: 2px solid $input_error;
-// }
-
 
 input[type="checkbox"],
 input[type="radio"] {
