--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,14 +1,13 @@
-// checking sass
+// checking sass compiling
 body {
   min-width: 320px;
-
-  // background-color: #f8823d;
 }
 
 $retina-dppx: 1.5dppx;
 $retina-dpi: 144dpi;
 // (min-resolution: $retina-dpi),
 // (min-resolution: $retina-dppx)
+
 // 320 mobile
 $mobile-wrapper: 280px;
 $mobile-width: 320px;
@@ -51,9 +50,9 @@ $check_radio_hvr: #bababa;
 
 // icon colors
 // $arrow_color: #3e4242;
-// header
 $menu_icon_color: #222222;
-// footer
+
+// footer icon colors
 $footer_icon_color: #666666;
 $footer_icon_color_hvr: #68b738;
 
